--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,4 @@ set( FLYCAP_INCLUDE "/usr/include/flycapture" )
 include_directories( ${FLYCAP_INCLUDE} )
 
 add_executable( app FlyCamera.cpp )
-target_link_libraries( app ${OpenCV_LIBS} -lflycapture )
+target_link_libraries( app ${OpenCV_LIBS} -lflycapture tesseract )
