--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,8 @@ include_directories( ${FLYCAP_INCLUDE} )
 
 #add_executable( app FlyCamera.cpp )
 #add_executable( app AlexMatch.cpp )
-add_executable( app WebCamera.cpp )
+add_executable( app WebCamera.cpp webcam.cpp)
+SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11" )
 
 target_link_libraries( app ${OpenCV_LIBS} -lflycapture tesseract )
 #target_link_libraries( app ${OpenCV_LIBS} -lflycapture tesseract ${GTK2_LIBRARIES} )
