--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ include_directories( ${FLYCAP_INCLUDE} )
 #add_executable( app FlyCamera.cpp )
 #add_executable( app AlexMatch.cpp )
 add_executable( app WebCamera.cpp webcam.cpp)
+#add_executable( app LineAndCircle.cpp )
 SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11" )
 
 target_link_libraries( app ${OpenCV_LIBS} -lflycapture tesseract )
