[2015/07/17]     1. update old images, add new images

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,10 +14,10 @@ set( FLYCAP_INCLUDE "/usr/include/flycapture" )
 include_directories( ${FLYCAP_INCLUDE} )
 
 #add_executable( app FlyCamera.cpp )
-#add_executable( app AlexMatch.cpp )
+add_executable( app AlexMatch.cpp )
 #add_executable( app WebCamera.cpp webcam.cpp)
 #add_executable( app LineAndCircle.cpp )
-add_executable( app findContours.cpp)
+#add_executable( app findContours.cpp)
 SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11" )
 
 target_link_libraries( app ${OpenCV_LIBS} -lflycapture tesseract )
