--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,9 +17,10 @@ include_directories( ${FLYCAP_INCLUDE} )
 #add_executable( app AlexMatch.cpp )
 #add_executable( app WebCamera.cpp webcam.cpp)
 #add_executable( app LineAndCircle.cpp )
-add_executable( app findContours.cpp)
+#add_executable( app findContours.cpp)
 #add_executable( app pointPolygonTest.cpp )
 #add_executable( app morphology.cpp)
+add_executable( app 2_Circles.cpp)
 SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11" )
 
 target_link_libraries( app ${OpenCV_LIBS} -lflycapture tesseract )
