--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,11 +20,12 @@ include_directories( ${FLYCAP_INCLUDE} )
 #add_executable( app findContours.cpp)
 #add_executable( app pointPolygonTest.cpp )
 #add_executable( app morphology.cpp)
-add_executable( app 2_Circles_v2.cpp)
+#add_executable( app 2_Circles_v2.cpp)
+add_executable( app 2_Circles_v3.cpp)
 #add_executable( app calcHist_Demo.cpp )
 #add_executable( app hull_demo.cpp )
 #add_executable( app generalContours_demo1.cpp )
 SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11" )
 
-target_link_libraries( app ${OpenCV_LIBS} -lflycapture tesseract )
+target_link_libraries( app ${OpenCV_LIBS} -lflycapture )
 #target_link_libraries( app ${OpenCV_LIBS} -lflycapture tesseract ${GTK2_LIBRARIES} )
