--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,16 +15,19 @@ include_directories( ${FLYCAP_INCLUDE} )
 
 #add_executable( app FlyCamera.cpp )
 #add_executable( app AlexMatch.cpp )
+#add_executable( app AlexMatch_MultiCamera.cpp )
 #add_executable( app WebCamera.cpp webcam.cpp)
 #add_executable( app LineAndCircle.cpp )
 #add_executable( app findContours.cpp)
 #add_executable( app pointPolygonTest.cpp )
 #add_executable( app morphology.cpp)
 #add_executable( app 2_Circles_v2.cpp)
-add_executable( app 2_Circles_v3.cpp)
+#add_executable( app 2_Circles_v3.cpp)
+add_executable( app 2_Circles_v3_head.cpp)
 #add_executable( app calcHist_Demo.cpp )
 #add_executable( app hull_demo.cpp )
 #add_executable( app generalContours_demo1.cpp )
+#add_executable( app testGTK.cpp )
 SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11" )
 
 target_link_libraries( app ${OpenCV_LIBS} -lflycapture tesseract )
