--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,10 +19,11 @@ include_directories( ${FLYCAP_INCLUDE} )
 #add_executable( app WebCamera.cpp webcam.cpp)
 #add_executable( app LineAndCircle.cpp )
 #add_executable( app findContours.cpp)
+add_executable( app FindContours.cpp)
 #add_executable( app pointPolygonTest.cpp )
 #add_executable( app morphology.cpp)
 #add_executable( app 2_Circles_v2.cpp)
-add_executable( app 2_Circles_v3.cpp)
+#add_executable( app 2_Circles_v3.cpp)
 #add_executable( app 2_Circles_v3_head.cpp)
 #add_executable( app 3_Lines.cpp)
 #add_executable( app calcHist_Demo.cpp )
