--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ include_directories( ${FLYCAP_INCLUDE} )
 #add_executable( app WebCamera.cpp webcam.cpp)
 #add_executable( app LineAndCircle.cpp )
 #add_executable( app findContours.cpp)
-#add_executable( app FindContours.cpp)
+add_executable( app FindContours.cpp)
 #add_executable( app pointPolygonTest.cpp )
 #add_executable( app morphology.cpp)
 #add_executable( app 2_Circles_v2.cpp)
@@ -31,7 +31,7 @@ include_directories( ${FLYCAP_INCLUDE} )
 #add_executable( app generalContours_demo1.cpp )
 #add_executable( app testGTK.cpp )
 #add_executable( app MultipleCameraEx.cpp )
-add_executable( app forDemo.cpp )
+#add_executable( app forDemo.cpp )
 SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11" )
 
 target_link_libraries( app ${OpenCV_LIBS} -lflycapture tesseract )
