--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,11 +15,11 @@ include_directories( ${FLYCAP_INCLUDE} )
 
 #add_executable( app FlyCamera.cpp )
 #add_executable( app AlexMatch.cpp )
-#add_executable( app AlexMatch_MultiCamera.cpp )
+add_executable( app AlexMatch_MultiCamera.cpp )
 #add_executable( app WebCamera.cpp webcam.cpp)
 #add_executable( app LineAndCircle.cpp )
 #add_executable( app findContours.cpp)
-add_executable( app FindContours.cpp)
+#add_executable( app FindContours.cpp)
 #add_executable( app pointPolygonTest.cpp )
 #add_executable( app morphology.cpp)
 #add_executable( app 2_Circles_v2.cpp)
