--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,8 +14,8 @@ set( FLYCAP_INCLUDE "/usr/include/flycapture" )
 include_directories( ${FLYCAP_INCLUDE} )
 
 #add_executable( app FlyCamera.cpp )
-#add_executable( app AlexMatch.cpp )
-add_executable( app AlexMatch_MultiCamera.cpp )
+add_executable( app AlexMatch.cpp )
+#add_executable( app AlexMatch_MultiCamera.cpp )
 #add_executable( app WebCamera.cpp webcam.cpp)
 #add_executable( app LineAndCircle.cpp )
 #add_executable( app findContours.cpp)
