[2016/02/23]     1. test for multi camera.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ include_directories( ${FLYCAP_INCLUDE} )
 #add_executable( app WebCamera.cpp webcam.cpp)
 #add_executable( app LineAndCircle.cpp )
 #add_executable( app findContours.cpp)
-add_executable( app FindContours.cpp)
+#add_executable( app FindContours.cpp)
 #add_executable( app pointPolygonTest.cpp )
 #add_executable( app morphology.cpp)
 #add_executable( app 2_Circles_v2.cpp)
@@ -31,10 +31,11 @@ add_executable( app FindContours.cpp)
 #add_executable( app hull_demo.cpp )
 #add_executable( app generalContours_demo1.cpp )
 #add_executable( app testGTK.cpp )
-#add_executable( app MultipleCamera.cpp )
+add_executable( app MultipleCameraTest.cpp )
+#add_executable( app MultipleCameraEx.cpp )
 #add_executable( app AsyncTriggerEx )
 #add_executable( app forDemo.cpp )
-SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11" )
+SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall" )
 
 target_link_libraries( app ${OpenCV_LIBS} -lflycapture tesseract )
 #target_link_libraries( app ${OpenCV_LIBS} -lflycapture tesseract ${GTK2_LIBRARIES} )
