--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,11 +31,14 @@ include_directories( ${FLYCAP_INCLUDE} )
 #add_executable( app hull_demo.cpp )
 #add_executable( app generalContours_demo1.cpp )
 #add_executable( app testGTK.cpp )
-add_executable( app MultipleCameraTest.cpp )
+#add_executable( app MultipleCameraTest.cpp )
 #add_executable( app MultipleCameraEx.cpp )
 #add_executable( app AsyncTriggerEx )
 #add_executable( app forDemo.cpp )
-SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall" )
+#add_executable( app HoughLinesP.cpp )
+add_executable( app Histogram.cpp )
+SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11" )
+#SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall" )
 
 target_link_libraries( app ${OpenCV_LIBS} -lflycapture tesseract )
 #target_link_libraries( app ${OpenCV_LIBS} -lflycapture tesseract ${GTK2_LIBRARIES} )
