[2016/03/01]     1. add segment objects.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,7 +36,8 @@ include_directories( ${FLYCAP_INCLUDE} )
 #add_executable( app AsyncTriggerEx )
 #add_executable( app forDemo.cpp )
 #add_executable( app HoughLinesP.cpp )
-add_executable( app Histogram.cpp )
+#add_executable( app Histogram.cpp )
+add_executable( app segment_objects.cpp )
 SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11" )
 #SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall" )
 
