--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ include_directories( ${FLYCAP_INCLUDE} )
 #add_executable( app FlyCamera.cpp )
 #add_executable( app AlexMatch.cpp )
 #add_executable( app AlexMatch_MultiCamera.cpp )
-#add_executable( app AlexMatch_MultiCamera_v2.cpp )
+#add_executable( app AlexMatch_MultiCamera_v2.cpp CommonFlySDK.cpp )
 #add_executable( app WebCamera.cpp webcam.cpp)
 #add_executable( app LineAndCircle.cpp )
 #add_executable( app findContours.cpp)
@@ -33,7 +33,7 @@ include_directories( ${FLYCAP_INCLUDE} )
 #add_executable( app testGTK.cpp )
 #add_executable( app MultipleCameraEx.cpp )
 #add_executable( app MultipleCameraTest.cpp )
-add_executable( app MultipleCameraTest2.cpp )
+add_executable( app MultipleCameraTest2.cpp CommonFlySDK.cpp)
 #add_executable( app forDemo.cpp )
 #add_executable( app HoughLinesP.cpp )
 #add_executable( app Histogram.cpp )
