--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,7 @@ include_directories(${PYTHON_INCLUDE_DIRS})
 #add_executable( app FlyCamera.cpp )
 #add_executable( app AlexMatch.cpp )
 #add_executable( app AlexMatch_MultiCamera.cpp )
-add_executable( app AlexMatch_MultiCamera_v2.cpp CommonFlySDK.cpp )
+#add_executable( app AlexMatch_MultiCamera_v2.cpp CommonFlySDK.cpp )
 #add_executable( app WebCamera.cpp webcam.cpp)
 #add_executable( app LineAndCircle.cpp )
 #add_executable( app findContours.cpp)
@@ -40,6 +40,7 @@ add_executable( app AlexMatch_MultiCamera_v2.cpp CommonFlySDK.cpp )
 #add_executable( app HoughLinesP.cpp )
 #add_executable( app Histogram.cpp )
 #add_executable( app segment_objects.cpp )
+add_executable( app gpio.cpp )
 SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11" )
 #SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall" )
 
