[2016/03/25]     1. temp.     2. improved gpio.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,14 +40,15 @@ include_directories(${PYTHON_INCLUDE_DIRS})
 #add_executable( app MultipleCameraTest.cpp )
 #add_executable( app MultipleCameraTest2.cpp CommonFlySDK.cpp)
 #add_executable( app forDemo.cpp )
+#add_executable( app AlexMatch_MultiCamera_v3.cpp CommonFlySDK.cpp )
 
 #add_executable( app HoughLinesP.cpp )
 #add_executable( app Histogram.cpp )
 #add_executable( app segment_objects.cpp )
 #add_executable( app AsyncTriggerEx.cpp )
 
-#add_executable( app gpio_led.cpp )
-add_executable( app Trigger_hardware.cpp )
+add_executable( app gpio_led.cpp )
+#add_executable( app Trigger_hardware.cpp )
 #add_executable( app FireTrigger.cpp )
 SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11" )
 #SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall" )
