--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,7 @@ include_directories(${PYTHON_INCLUDE_DIRS})
 #add_executable( app FlyCamera.cpp )
 #add_executable( app AlexMatch.cpp )
 #add_executable( app AlexMatch_MultiCamera.cpp )
-#add_executable( app AlexMatch_MultiCamera_v2.cpp CommonFlySDK.cpp )
+add_executable( app AlexMatch_MultiCamera_v2.cpp CommonFlySDK.cpp )
 #add_executable( app WebCamera.cpp webcam.cpp)
 #add_executable( app LineAndCircle.cpp )
 #add_executable( app findContours.cpp)
@@ -31,6 +31,7 @@ include_directories(${PYTHON_INCLUDE_DIRS})
 #add_executable( app 2_Circles_v3_head.cpp)
 #add_executable( app 3_Lines.cpp)
 #add_executable( app calcHist_Demo.cpp )
+#add_executable( app 2_Circles_v4_head_tail.cpp CommonFlySDK.cpp )
 
 #add_executable( app hull_demo.cpp )
 #add_executable( app generalContours_demo1.cpp )
@@ -47,11 +48,13 @@ include_directories(${PYTHON_INCLUDE_DIRS})
 #add_executable( app segment_objects.cpp )
 #add_executable( app AsyncTriggerEx.cpp )
 
-add_executable( app gpio_led.cpp )
+#add_executable( app gpio_led.cpp )
 #add_executable( app Trigger_hardware.cpp )
 #add_executable( app FireTrigger.cpp )
-SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11" )
-#SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall" )
+#add_executable( app gpio_new.cpp )
 
-target_link_libraries( app ${OpenCV_LIBS} ${PYTHON_LIBRARIES} -lflycapture tesseract )
+#SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11" )
+SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall" )
+
+target_link_libraries( app ${OpenCV_LIBS} ${PYTHON_LIBRARIES} -lflycapture tesseract mpsse )
 #target_link_libraries( app ${OpenCV_LIBS} -lflycapture tesseract ${GTK2_LIBRARIES} )
